# hexlet-vacancy-analysis

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  postgres  pyproject.toml  requirements.txt
app/: parser.py  settings.py  urls.py  views.py
app/fixtures/: agency_pricing_initial.json  data_parser.json  pricing_initial.json
app/frontend/: package-lock.json  package.json
app/frontend/src/: main.tsx
app/frontend/src/types/: index.ts
app/homepage/: admin.py  apps.py  models.py  sitemap.py  urls.py  validators.py  views.py
app/homepage/migrations/: 0001_initial.py
app/infrastructure/: sitemap_loader.py
app/services/account/: apps.py  sitemap.py  views.py
app/services/ai/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
app/services/ai/migrations/: 0001_initial.py
app/services/ai/services/: chat_service.py  exceptions.py  openrouter.py
app/services/auth/github/: apps.py
app/services/auth/password_reset/: apps.py  forms.py  models.py  sitemap.py  tasks.py  tests.py  urls.py  utils.py  views.py
app/services/blog/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
app/services/foragencies/: admin.py  apps.py  models.py  sitemap.py  tests.py  urls.py  views.py
app/services/parser/: apps.py  models.py  tests.py  urls.py  views.py
app/services/pricing/: admin.py  apps.py  models.py  sitemap.py  tests.py  urls.py  views.py
app/services/vacancies/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
app/templates/: password_reset_email.html
(+81 files in other folders)
